<?xml version="1.0" encoding="utf-8"?>

<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
>
    <data>
        <variable
                name="viewmodel"
                type="com.macrosoft.reminder.viewmodel.LoginViewModel"/>
    </data>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:layout_width="147dp"
                android:layout_height="125dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="79dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/medimate_logo"/>

        <EditText
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:inputType="textPersonName"
                tools:ignore="Autofill"
                android:hint="@string/enter_id"
                android:ems="10"
                android:id="@+id/userID"
                android:text="@={viewmodel.userIdContent}"
                android:layout_marginTop="34dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="43dp"
                android:layout_marginStart="12dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="207dp"/>

        <EditText
                android:id="@+id/password"
                tools:ignore="Autofill"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:inputType="textPassword"
                android:hint="@string/enter_password"
                android:text="@={viewmodel.passwordContent}"
                android:ems="10"
                android:layout_below="@+id/userID"
                android:layout_marginTop="-207dp"
                android:layout_alignStart="@+id/userID"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="146dp"/>

        <com.google.android.material.button.MaterialButton
                android:text="@string/log_in"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:id="@+id/loginButton"
                android:onClick="@{() -> viewmodel.onLoginClick()}"
                android:background="@color/blue"
                android:layout_marginBottom="84dp"
                app:cornerRadius="50dp"
                android:padding="5dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:fontFamily="@font/moonchild"/>

        <ImageView
                app:srcCompat="@drawable/user_icon_img"
                android:layout_width="62dp"
                android:layout_height="49dp"
                android:id="@+id/userIdIconImg"
                android:layout_marginStart="20dp"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="211dp"
                android:layout_alignParentBottom="true"
                android:layout_toStartOf="@+id/userID"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/user_icon_image"/>

        <ImageView
                app:srcCompat="@drawable/lock_icon_img"
                android:layout_width="56dp"
                android:layout_height="45dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="19dp"
                android:layout_toStartOf="@+id/userID"
                android:layout_marginEnd="2dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="154dp"
                android:contentDescription="@string/lock_icon_image"/>

        <TextView
                android:text="@string/click_here_to_create_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:id="@+id/goToCreateAcc"
                android:onClick="@{() -> viewmodel.onCreateAccountClick()}"
                android:layout_marginBottom="42dp"
                android:textStyle="italic|bold"
                android:textSize="16sp"
        />

    </RelativeLayout>

</layout>