<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray">

    <TextView
            android:id="@+id/selectStartDate"
            android:hint="@string/select_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:textSize="20sp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="24dp"
            android:layout_alignParentTop="true"/>

    <TextView
            android:id="@+id/selectEndDate"
            android:hint="@string/select_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/selectStartDate"
            android:background="#ffffff"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:textSize="20sp"
            android:layout_marginTop="9dp"/>

    <TextView
            android:id="@+id/selectFrequency"
            android:hint="@string/select_frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/selectEndDate"
            android:background="@color/white"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:textSize="20sp"
            android:layout_marginTop="9dp"/>

    <TextView
            android:id="@+id/setAlarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_alarm"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_below="@+id/selectFrequency"
            android:background="@color/orange"
            android:padding="10dp"
            android:textSize="23sp"
            android:layout_marginTop="9dp"/>

    <ImageView
            android:layout_width="58dp"
            android:layout_height="49dp"
            app:srcCompat="@android:drawable/ic_menu_add"
            android:layout_below="@id/selectFrequency"
            android:layout_alignEnd="@id/setAlarm"
            android:layout_marginEnd="0dp"
            android:id="@+id/plusAlarm"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/add_button_logo"/>

    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/selectEndDate"
            android:id="@+id/spinner"
            android:layout_marginTop="9dp"
            android:padding="10dp"/>
</RelativeLayout>