<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray">

    <EditText
            android:hint="@string/med_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:paddingLeft="90dp"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:textSize="20dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="24dp"
            android:layout_alignParentTop="true"/>

    <EditText
            android:hint="@string/dosage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:paddingLeft="90dp"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:textSize="20dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="110dp"
            android:layout_alignParentTop="true"/>

    <TextView
            android:text="@string/schedule"
            android:id="@+id/goToSchedule_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:paddingLeft="90dp"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:textSize="20dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="214dp"
            android:layout_alignParentTop="true"/>

    <TextView
            android:text="@string/alarm_type"
            android:id="@+id/chooseAlarmType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:paddingLeft="90dp"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:textSize="20dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="300dp"
            android:layout_alignParentTop="true"/>

    <ImageView
            android:layout_width="65dp"
            android:layout_height="76dp"
            app:srcCompat="@drawable/medicine_img"
            android:layout_alignParentStart="true"
            android:layout_marginStart="12dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="25dp"/>

    <ImageView
            android:layout_width="63dp"
            android:layout_height="84dp"
            app:srcCompat="@drawable/dosage_img"
            android:layout_alignParentStart="true"
            android:layout_marginStart="9dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="104dp"/>

    <ImageView
            android:layout_width="63dp"
            android:layout_height="84dp"
            app:srcCompat="@drawable/calendar_img"
            android:layout_alignParentStart="true"
            android:layout_marginStart="13dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="215dp"/>

    <ImageView
            android:layout_width="63dp"
            android:layout_height="86dp"
            app:srcCompat="@drawable/alarm_img"
            android:layout_alignParentStart="true"
            android:layout_marginStart="12dp"
            android:id="@+id/imageView"
            android:layout_marginTop="296dp"
            android:layout_alignParentTop="true"/>

    <Button
            android:text="@string/add_med"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/addMedButton"
            android:background="@color/blue"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="99dp"
            android:layout_centerInParent="true"/>

    <Button
            android:text="@string/delete_med"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/deleteMedButton"
            android:background="@color/red"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="32dp"/>

</RelativeLayout>