<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp">


    <TextView

            android:id="@+id/title"
            android:text="Frequently Asked Questions"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="22sp"/>







        <RelativeLayout
                android:layout_below="@+id/title"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="27dp"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="27dp"
                android:layout_marginTop="27dp"
                >


            <TextView

                    android:id="@+id/q1"
                    android:textStyle="bold|italic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/q1"
                    android:textSize="22sp"/>

            <TextView

                    android:id="@+id/text1"

                    android:layout_below="@+id/q1"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/text"
                    android:textSize="15sp"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text1"
                    android:padding="5dp"
                    android:text="@string/a1"
                    android:textSize="18sp"
                    android:id="@+id/a1"/>






            <TextView
                    android:id="@+id/q2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textStyle="bold|italic"
                    android:padding="5dp"
                    android:text="@string/q2"
                    android:layout_below="@+id/a1"
                    android:textSize="22sp"/>


            <TextView

                    android:id="@+id/text2"
                    android:layout_below="@+id/q2"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/text"
                    android:textSize="15sp"/>


            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text2"
                    android:padding="5dp"
                    android:text="@string/a2"
                    android:textSize="18sp"
                    android:id="@+id/a2"
/>




            <TextView
                    android:id="@+id/q3"
                    android:textStyle="bold|italic"
                    android:layout_marginTop="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/q3"
                    android:layout_below="@+id/a2"
                    android:textSize="22sp"/>

            <TextView

                    android:id="@+id/text3"
                    android:layout_below="@+id/q3"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/text"
                    android:textSize="15sp"/>



            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text3"
                    android:padding="5dp"
                    android:text="@string/a3"
                    android:textSize="18sp"
                    android:id="@+id/a3"
                    />







        </RelativeLayout>


</RelativeLayout>